--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,13 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter:
-    sdk: flutter
-
+    flutter:
+      sdk: flutter
+    flutter_native_splash: ^2.2.15
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+    cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
